Add CORE_EXPORT to freezeV8Object() in V8Binding.

Some IDLs in modules requires FrozenArray<>. (e.g. PaymentAddress.idl)
To use it in modules directory, we should export freezeV8Object() function.

BUG=617919

Review-Url: https://codereview.chromium.org/2044083002
Cr-Commit-Position: refs/heads/master@{#398307}

Former-commit-id: 5bee0a2efcba096a0d371b7382a462b86c4d3565